tests/int01_err.json.err
Parse error at line 001

001: {"val": 01}
             ^
Leading zero in number!
